# grub-customizer

./: .cproject  .gitattributes  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README  cfg_static.dump  changelog  cmake_install.cmake  compile and install.sh  config.h.in  config.hpp.in  grub-customizer  grub-customizer.desktop  grubcfg-proxy
.pc/: applied-patches
debian/: changelog  changelog.d  changelog.mentors.d  changelog.natty_repo  changelog.revu.d  changelog_lucid  changelog_maverick  control  copyright  files  rules  substvars  watch
debian/patches/: 01su-to-root.dpatch  02_gtkmm24.dpatch  02gtkmm-2.4.dpatch  02gtkmm_combobox_legacy.dpatch  03_libarchive_old.dpatch
misc/: copyright  grub-customizer.desktop  pkexec_policy.in
move_strategies/: CMakeLists.txt
move_strategies/translation/: translation-ar.mo  translation-ast.mo  translation-ast.po  translation-el.po  translation-en_GB.po  translation-es.mo  translation-eu.po  translation-fi.mo  translation-fr.po  translation-hr.po  translation-hu.mo  translation-hu.po  translation-ja.po  translation-ru.mo  translation-uk.po  translation.pot
src/: ControllerCollection.h  config.h  deviceDataList.cpp  fbResolutionsGetter.cpp  fbResolutionsGetter.h  grubcfg_proxy.cpp  grubconf_ui.h  grubconf_ui_gtk.cpp  grubconf_ui_gtk.h  grubconfig.h  gtk-client.cpp  liveCDSetupDialog.cpp  pscriptname_translator.h  script.cpp  script.h  settings_dlg_gtk.cpp  settings_dlg_gtk.h  settings_mng_ds.cpp  settings_mng_ds.h  umount_all.cpp
src/Bootstrap/: Application.hpp  Factory.hpp  GLibRegex.cpp  GlibThread.cpp  GtkApplication.cpp  GtkApplication.cpp.inc.hpp  GtkApplication.inc.cpp  GtkView.cpp  GtkView.cpp.inc.hpp  GtkView.inc.cpp  Regex.h  Regex.hpp  Thread.h  Thread.hpp  View.h  View.hpp
src/Common/: ArrayStructure.hpp  CsvProcessor.hpp  Exception.hpp  FileSystem.hpp  Functions.hpp  Helper.hpp  Type.hpp
src/Controller/: AboutController.h  AboutController.hpp  AboutControllerImpl.cpp  AboutControllerImpl.h  AboutControllerImpl.hpp  ControllerAbstract.cpp  ControllerAbstract.h  ControllerAbstract.hpp  ControllerCollection.h  ControllerCollection.hpp  EntryEditController.h  EntryEditController.hpp  EntryEditControllerImpl.cpp  EntryEditControllerImpl.h  EntryEditControllerImpl.hpp  EnvEditorController.h  EnvEditorController.hpp  EnvEditorControllerImpl.cpp  EnvEditorControllerImpl.h  EnvEditorControllerImpl.hpp  ErrorController.h  ErrorController.hpp  ErrorControllerImpl.cpp  ErrorControllerImpl.h  ErrorControllerImpl.hpp  InstallerController.h  InstallerController.hpp  InstallerControllerImpl.cpp  InstallerControllerImpl.h  InstallerControllerImpl.hpp  MainController.h  MainController.hpp  MainControllerImpl.cpp  MainControllerImpl.h  MainControllerImpl.hpp  SettingsController.h  SettingsController.hpp  SettingsControllerImpl.cpp  SettingsControllerImpl.h  SettingsControllerImpl.hpp  (+12 more)
src/Mapper/: EntryName.h  EntryName.hpp  EntryNameImpl.cpp  EntryNameImpl.h  EntryNameImpl.hpp
src/Model/: DeviceDataList.cpp  DeviceDataList.h  DeviceDataList.hpp  DeviceDataListInterface.h  DeviceDataListInterface.hpp  DeviceMap.cpp  DeviceMap.h  DeviceMap.hpp  Entry.cpp  Entry.h  Entry.hpp  EntryPathBuilder.h  EntryPathBuilder.hpp  EntryPathBuilderImpl.cpp  EntryPathBuilderImpl.h  EntryPathBuilderImpl.hpp  EntryPathFollower.h  EntryPathFollower.hpp  Env.cpp  Env.h  Env.hpp  EnvConnection.hpp  FbResolutionsGetter.cpp  FbResolutionsGetter.h  FbResolutionsGetter.hpp  FbResolutionsGetterConnection.hpp  Installer.cpp  Installer.h  Installer.hpp  InstallerConnection.hpp  ListCfg.cpp  ListCfg.h  ListCfg.hpp  MountTable.cpp  MountTable.h  MountTable.hpp  Proxy.cpp  Proxy.h  Proxy.hpp  ProxyScriptData.cpp  (+41 more)
src/View/: About.h  About.hpp  ColorChooser.h  ColorChooser.hpp  EntryEditor.h  EntryEditor.hpp  EnvEditor.h  EnvEditor.hpp  Error.h  Error.hpp  Installer.h  Installer.hpp  Main.h  Main.hpp  Settings.h  Settings.hpp  Theme.h  Theme.hpp  Trash.h  Trash.hpp
src/interface/: GrubEnvEditor.h  aboutDialog.h  colorChooser.h  contentParser.h  contentParserFactory.h  deviceDataList_Iface.h  entryAddDlg.h  entryEditDlg.h  entryPathBuilder.h  entryPathFollower.h  eventListener_model_iface.h  eventListener_view_iface.h  evt_entryAddDlg.h  evt_entryEditDlg.h  evt_grubEnvEditor.h  evt_grubInstallDlg.h  evt_listCfgDlg.h  evt_model.h  evt_partitionChooser.h  evt_scriptAddDlg.h  evt_settings.h  grubInstallDlg.h  grubconf_ui.h  grublistCfgDlg.h  logger.h  mutex.h  partitionChooser.h  scriptAddDlg.h  (+3 more)
src_dir/: CMakeLists.txt  Makefile  cmake_install.cmake  confparser.cpp  confparser.h  generatedConfig.dump  grubcfg_proxy.cpp  grubconf_ui.h  grubconf_ui_gtk.cpp  grubconf_ui_gtk.h  grubconfig.cpp  grubconfig.h  gtk-client.cpp  libproxy.cpp  libproxy.h  libproxyscript_parser.cpp  libproxyscript_parser.h  liveCDSetupDialog.h  mountTable.cpp  proxy.cpp  proxy.h  proxylist.cpp  proxylist.h  proxyscript_parser.cpp  pscriptname_translator.cpp  repository.cpp  repository.h  rule.cpp  rule.h  settings_dlg_gtk.cpp  settings_dlg_gtk.h  settings_mng_ds.cpp
src_dir/grub-customizer.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src_dir/grubcfg-proxy.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
translation/: german.mo  german.po  message.po  messages.pot  translation-ar.mo  translation-ar.po  translation-ast.mo  translation-ast.po  translation-bg.mo  translation-bg.po  translation-bs.mo  translation-bs.po  translation-ca.mo  translation-ca.po  translation-cs.mo  translation-cs.po  translation-cy.mo  translation-cy.po  translation-de.mo  translation-de.po  translation-el.mo  translation-el.po  translation-en_GB.mo  translation-en_GB.po  translation-es.mo  translation-es.po  translation-et.mo  translation-et.po  translation-eu.mo  translation-eu.po  translation-fi.mo  translation-fi.po  translation-fr.mo  translation-fr.po  translation-gl.mo  translation-gl.po  translation-hr.mo  translation-hr.po  translation-hu.mo  translation-hu.po  (+43 more)
(+357 files in other folders)
